Migrate PowerTracingAgent to sequences

Bug: 761496, 667892
Change-Id: I7a6542091a86e6e84b0f83dd799567232473a699